sending message via LLM works for simulation and serial

--- a/Pipeline_with_Plantid_Groq_and_LINE.ipynb
+++ b/Pipeline_with_Plantid_Groq_and_LINE.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "Wq9XjLyPjwDM",
    "metadata": {
     "id": "Wq9XjLyPjwDM"
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "37b2b4cd2a0c5a1c",
    "metadata": {
     "ExecuteTime": {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "6c90fb7248b58427",
    "metadata": {
     "ExecuteTime": {
@@ -407,7 +407,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sweetie, I can tell that you're doing your best for your Monstera Deliciosa, but it's looking like it might be a bit too warm in there! The current temperature is a bit above the ideal range, and the humidity is a tad low. Recommended fix: try moving your plant to a cooler spot with a consistent temperature between 20-25°C, and consider misting it some more to get that humidity level up to 60-80%.\n"
+      "Dear plant parent! I see that your Monstera Deliciosa is living in a cozy 27.5°C with 55% humidity and moderate light. While it's doing okay, I think we can make a few tweaks for optimal happiness!\n",
+      "\n",
+      "I recommend keeping an eye on the temperature, bringing it down to the ideal range of 20-25°C to prevent any stress. Also, a slight boost in humidity to 60-80% would be lovely. And, don't worry about the light level – it's just a bit on the lower side, but still suitable. If not already, consider misting occasionally to combat dry air.\n"
      ]
     }
    ],
@@ -500,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "0uqbM8eJQch4",
    "metadata": {
     "colab": {
@@ -516,10 +518,38 @@
      "output_type": "stream",
      "text": [
       "Collecting data from Arduino...\n",
-      "Temperature: 24.78 °C\n",
-      "Humidity: 65.94 %\n",
-      "Pressure: 102.02 hPa\n",
+      "Temperature: 24.10 °C\n",
+      "Humidity: 67.50 %\n",
+      "Pressure: 102.04 hPa\n",
       "Soil Moisture (Analog): 99.00 %\n",
+      "Soil Moisture (Digital): WET\n",
+      "---------------------------\n",
+      "Temperature: 24.12 °C\n",
+      "Humidity: 67.47 %\n",
+      "Pressure: 102.04 hPa\n",
+      "Soil Moisture (Analog): 99.00 %\n",
+      "Soil Moisture (Digital): WET\n",
+      "---------------------------\n",
+      "Temperature: 24.10 °C\n",
+      "Humidity: 67.48 %\n",
+      "Pressure: 102.04 hPa\n",
+      "Soil Moisture (Analog): 99.00 %\n",
+      "Soil Moisture (Digital): WET\n",
+      "---------------------------\n",
+      "Temperature: 24.12 °C\n",
+      "Humidity: 67.48 %\n",
+      "Pressure: 102.04 hPa\n",
+      "Soil Moisture (Analog): 99.00 %\n",
+      "Soil Moisture (Digital): WET\n",
+      "---------------------------\n",
+      "Temperature: 24.10 °C\n",
+      "Humidity: 67.47 %\n",
+      "Pressure: 102.04 hPa\n",
+      "Soil Moisture (Analog): 99.00 %\n",
+      "Soil Moisture (Digital): WET\n",
+      "---------------------------\n",
+      "Temperature: 24.10 °C\n",
+      "Humidity: 67.47 %\n",
       "Data collection stopped.\n"
      ]
     }
@@ -580,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "RdUcFrKniSel",
    "metadata": {
     "colab": {
@@ -979,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "gXHwNc5WVVV6",
    "metadata": {
     "id": "gXHwNc5WVVV6"
@@ -1005,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "4pQnuxZAX9VK",
    "metadata": {
     "id": "4pQnuxZAX9VK"
@@ -1089,21 +1119,13 @@
     "id": "2eeigZfMYuMZ",
     "outputId": "fc028b8d-3e52-4484-8140-7cbba1645f7d"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulated Data: {'temperature': 21.66, 'humidity': 56.62, 'pressure': 34.21, 'moisture': 69.35}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Simulation loop\n",
     "from time import sleep\n",
     "from datetime import datetime, timedelta\n",
     "# Set the interval for messaging (4 hours)\n",
-    "message_interval = timedelta(hours=4)\n",
+    "message_interval = timedelta(minutes=1)\n",
     "next_message_time = datetime.now()\n",
     "PLANT_NAME = \"Eustoma russellianum\"  # Example plant name\n",
     "try:\n",
