--- a/Pipeline_with_Plantid_Groq_and_LINE.ipynb
+++ b/Pipeline_with_Plantid_Groq_and_LINE.ipynb
@@ -1081,7 +1081,7 @@
     "# This is the wrapper function that combines the two steps\n",
     "def send_plant_status_to_followers(temperature, humidity, pressure, moisture, plant_name):\n",
     "    client = Groq(\n",
-    "    api_key=\"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\",\n",
+    "    api_key=os.getenv(\"GROQ_API_KEY\"),\n",
     "    )\n",
     "\n",
     "    bot = PlantitaBot(\"HYIfkCHmidAfgMc2KcXBLUXzpNvsvJ/t5k8VwU2+ekWovndds7h/5h2Qq+SZkoYjNCPuLg0BHANjAnX81xjbfT7imjJ1s+gYZf6XU4ttM4kuFTkChGSHDZUVKzFpTgesDxTWmILCYw0vgPz/bse7TQdB04t89/1O/w1cDnyilFU=\")\n",
