fixed access key problem

--- a/Pipeline_with_Plantid_Groq_and_LINE.ipynb
+++ b/Pipeline_with_Plantid_Groq_and_LINE.ipynb
@@ -271,7 +271,7 @@
     "# Example usage:\n",
     "# if __name__ == \"__main__\":\n",
     "#     # Initialize the bot with your channel access token\n",
-    "#     CHANNEL_ACCESS_TOKEN = \"HYIfkCHmidAfgMc2KcXBLUXzpNvsvJ/t5k8VwU2+ekWovndds7h/5h2Qq+SZkoYjNCPuLg0BHANjAnX81xjbfT7imjJ1s+gYZf6XU4ttM4kuFTkChGSHDZUVKzFpTgesDxTWmILCYw0vgPz/bse7TQdB04t89/1O/w1cDnyilFU=\"  # Replace with your actual token\n",
+    "#     CHANNEL_ACCESS_TOKEN = os.getenv(\"CHANNEL_ACCESS_TOKEN\")\n",
     "\n",
     "#     bot = PlantitaBot(CHANNEL_ACCESS_TOKEN)\n",
     "\n",
@@ -322,7 +322,7 @@
    "outputs": [],
    "source": [
     "# Initialize the bot\n",
-    "bot = PlantitaBot(\"HYIfkCHmidAfgMc2KcXBLUXzpNvsvJ/t5k8VwU2+ekWovndds7h/5h2Qq+SZkoYjNCPuLg0BHANjAnX81xjbfT7imjJ1s+gYZf6XU4ttM4kuFTkChGSHDZUVKzFpTgesDxTWmILCYw0vgPz/bse7TQdB04t89/1O/w1cDnyilFU=\")\n",
+    "bot = PlantitaBot(CHANNEL_ACCESS_TOKEN)\n",
     "\n",
     "# Send a plant status update\n",
     "# bot.send_plant_status(\n",
@@ -419,7 +419,7 @@
     "from groq import Groq\n",
     "\n",
     "client = Groq(\n",
-    "    api_key=\"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\",\n",
+    "    api_key=os.getenv(\"GROQ_API_KEY\"),\n",
     ")\n",
     "\n",
     "chat_completion = client.chat.completions.create(\n",
@@ -631,7 +631,7 @@
     "    # Define the endpoint and API key\n",
     "    url = \"https://api.plant.id/v2/identify\"\n",
     "    #api_key = userdata.get('plantid_key')  # Replace with your actual API key\n",
-    "    api_key = \"V3bNS9Yrc6yWsY2pgevJnjNoYtnhIw6Uvh9PxvuNwiyTyYf5Tr\"\n",
+    "    api_key = os.getenv(\"PLANT_ID_API_KEY\")\n",
     "    \n",
     "    # need to add this:\n",
     "    #https://plant.id/api/v3/kb/plants/:access_token?details=common_names,\n",
@@ -779,12 +779,11 @@
     "\n",
     "    # Initialize the Groq client\n",
     "    client = Groq(\n",
-    "    api_key=\"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\",\n",
+    "    api_key=os.getenv(\"GROQ_API_KEY\"),\n",
     "    )\n",
     "\n",
     "    # Initialize the LINE bot with your channel access token\n",
-    "    bot = PlantitaBot(\"HYIfkCHmidAfgMc2KcXBLUXzpNvsvJ/t5k8VwU2+ekWovndds7h/5h2Qq+SZkoYjNCPuLg0BHANjAnX81xjbfT7imjJ1s+gYZf6XU4ttM4kuFTkChGSHDZUVKzFpTgesDxTWmILCYw0vgPz/bse7TQdB04t89/1O/w1cDnyilFU=\")\n",
-    "\n",
+    "    bot = PlantitaBot(os.getenv(\"CHANNEL_ACCESS_TOKEN\"))\n",
     "    # get the plant identification\n",
     "    plant_name = identify_plant(image_path)\n",
     "    \n",
@@ -833,8 +832,7 @@
     "    # Define the endpoint and API key\n",
     "    url = \"https://api.plant.id/v2/health_assessment\"\n",
     "    #api_key = userdata.get('plantid_key')  # Replace with your actual API key\n",
-    "    api_key= \"V3bNS9Yrc6yWsY2pgevJnjNoYtnhIw6Uvh9PxvuNwiyTyYf5Tr\"\n",
-    "\n",
+    "    api_key= os.getenv(\"PLANTID_API_KEY\")\n",
     "    # Load the image and encode it in base64\n",
     "    image_path = \"plant.jpg\"\n",
     "    with open(image_path, \"rb\") as image_file:\n",
@@ -919,14 +917,14 @@
     "\n",
     "    # Initialize the Groq client\n",
     "    client = Groq(\n",
-    "    api_key=\"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\",\n",
+    "    api_key=os.getenv(\"GROQ_API_KEY\"),\n",
     "    )\n",
     "\n",
     "    # Initialize the LINE bot with your channel access token\n",
     "    # CHANNEL_ACCESS_TOKEN = os.getenv(\"CHANNEL_ACCESS_TOKEN\")\n",
     "    # bot = PlantitaBot(CHANNEL_ACCESS_TOKEN)\n",
     "    #we have to remember to put these keys into the secrets\n",
-    "    bot = PlantitaBot(\"HYIfkCHmidAfgMc2KcXBLUXzpNvsvJ/t5k8VwU2+ekWovndds7h/5h2Qq+SZkoYjNCPuLg0BHANjAnX81xjbfT7imjJ1s+gYZf6XU4ttM4kuFTkChGSHDZUVKzFpTgesDxTWmILCYw0vgPz/bse7TQdB04t89/1O/w1cDnyilFU=\")\n",
+    "    bot = PlantitaBot(os.getenv(\"CHANNEL_ACCESS_TOKEN\"))\n",
     "\n",
     "    # get the health assessment of the plant\n",
     "    health_status = get_health_assessment(image_path)\n",
@@ -1084,7 +1082,7 @@
     "    api_key=os.getenv(\"GROQ_API_KEY\"),\n",
     "    )\n",
     "\n",
-    "    bot = PlantitaBot(\"HYIfkCHmidAfgMc2KcXBLUXzpNvsvJ/t5k8VwU2+ekWovndds7h/5h2Qq+SZkoYjNCPuLg0BHANjAnX81xjbfT7imjJ1s+gYZf6XU4ttM4kuFTkChGSHDZUVKzFpTgesDxTWmILCYw0vgPz/bse7TQdB04t89/1O/w1cDnyilFU=\")\n",
+    "    bot = PlantitaBot(os.getenv(\"CHANNEL_ACCESS_TOKEN\"))\n",
     "\n",
     "    message = generate_plant_status_message(temperature, humidity, pressure, moisture,  plant_name)\n",
     "    if \"|<ALERT>|\" in message:\n",
