--- a/Messaging API and GROQ.ipynb
+++ b/Messaging API and GROQ.ipynb
@@ -2,26 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# LINE Messaging API"
-   ],
+   "id": "4cc409fc7bea6c04",
    "metadata": {
     "collapsed": false
    },
-   "id": "4cc409fc7bea6c04"
+   "source": [
+    "# LINE Messaging API"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Install Dependency"
-   ],
+   "id": "c2c45f630c4bb496",
    "metadata": {
     "collapsed": false
    },
-   "id": "c2c45f630c4bb496"
+   "source": [
+    "# Install Dependency"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "7b4fd1f8a2780375",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-31T09:00:20.429155Z",
+     "start_time": "2024-10-31T09:00:18.369710Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -37,29 +46,29 @@
    ],
    "source": [
     "!pip install requests"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-10-31T09:00:20.429155Z",
-     "start_time": "2024-10-31T09:00:18.369710Z"
-    }
-   },
-   "id": "7b4fd1f8a2780375",
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Broadcast Message"
-   ],
+   "id": "a85d7c8e26260e8a",
    "metadata": {
     "collapsed": false
    },
-   "id": "a85d7c8e26260e8a"
+   "source": [
+    "## Broadcast Message"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "37b2b4cd2a0c5a1c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-01T06:30:28.410867Z",
+     "start_time": "2024-11-01T06:30:28.404473Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -210,29 +219,29 @@
     "            message += \"\\n\\n⚠️ Action needed! Please check your plant.\"\n",
     "\n",
     "        return self.send_message(user_id, message)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-01T06:30:28.410867Z",
-     "start_time": "2024-11-01T06:30:28.404473Z"
-    }
-   },
-   "id": "37b2b4cd2a0c5a1c",
-   "execution_count": 5
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Example Usage of Broadcast"
-   ],
+   "id": "c102652d3ce4d2d1",
    "metadata": {
     "collapsed": false
    },
-   "id": "c102652d3ce4d2d1"
+   "source": [
+    "## Example Usage of Broadcast"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "6d46da2722fe2aca",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-01T06:28:51.145127Z",
+     "start_time": "2024-11-01T06:28:50.653345Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -247,7 +256,7 @@
     "# Example usage:\n",
     "if __name__ == \"__main__\":\n",
     "    # Initialize the bot with your channel access token\n",
-    "    CHANNEL_ACCESS_TOKEN = \"HYIfkCHmidAfgMc2KcXBLUXzpNvsvJ/t5k8VwU2+ekWovndds7h/5h2Qq+SZkoYjNCPuLg0BHANjAnX81xjbfT7imjJ1s+gYZf6XU4ttM4kuFTkChGSHDZUVKzFpTgesDxTWmILCYw0vgPz/bse7TQdB04t89/1O/w1cDnyilFU=\"  # Replace with your actual token\n",
+    "    CHANNEL_ACCESS_TOKEN = os.getenv(\"CHANNEL_ACCESS_TOKEN\")\n",
     "\n",
     "    bot = PlantitaBot(CHANNEL_ACCESS_TOKEN)\n",
     "\n",
@@ -266,34 +275,36 @@
     "        light_level=80.0,\n",
     "        status=\"warning\"\n",
     "    )"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-01T06:28:51.145127Z",
-     "start_time": "2024-11-01T06:28:50.653345Z"
-    }
-   },
-   "id": "6d46da2722fe2aca",
-   "execution_count": 3
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Example Usage of Direct Message\n",
-    "**Still Not Working** Need to setup Webhook Server."
-   ],
+   "id": "27ad3cf1413cc705",
    "metadata": {
     "collapsed": false
    },
-   "id": "27ad3cf1413cc705"
+   "source": [
+    "## Example Usage of Direct Message\n",
+    "**Still Not Working** Need to setup Webhook Server."
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "4517fbe22a47bbf8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-01T06:30:32.071805Z",
+     "start_time": "2024-11-01T06:30:31.906428Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'message': \"The property, 'to', in the request body is invalid (line: -, column: -)\"}"
+      "text/plain": [
+       "{'message': \"The property, 'to', in the request body is invalid (line: -, column: -)\"}"
+      ]
      },
      "execution_count": 6,
      "metadata": {},
@@ -302,8 +313,7 @@
    ],
    "source": [
     "# Initialize the bot\n",
-    "bot = PlantitaBot(\"HYIfkCHmidAfgMc2KcXBLUXzpNvsvJ/t5k8VwU2+ekWovndds7h/5h2Qq+SZkoYjNCPuLg0BHANjAnX81xjbfT7imjJ1s+gYZf6XU4ttM4kuFTkChGSHDZUVKzFpTgesDxTWmILCYw0vgPz/bse7TQdB04t89/1O/w1cDnyilFU=\")\n",
-    "\n",
+    "bot = PlantitaBot(CHANNEL_ACCESS_TOKEN)\n",
     "# Send a plant status update\n",
     "bot.send_plant_status(\n",
     "    user_id=\"USER_ID\",\n",
@@ -312,39 +322,39 @@
     "    light_level=80.0,\n",
     "    status=\"warning\"\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-01T06:30:32.071805Z",
-     "start_time": "2024-11-01T06:30:31.906428Z"
-    }
-   },
-   "id": "4517fbe22a47bbf8",
-   "execution_count": 6
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "3f98efa59f92ce1e",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## GROQ Implementation"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "3f98efa59f92ce1e"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Install Dependency"
-   ],
+   "id": "8c560218d9c7ed5c",
    "metadata": {
     "collapsed": false
    },
-   "id": "8c560218d9c7ed5c"
+   "source": [
+    "# Install Dependency"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "8cc51fd94e76a4f3",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-31T09:16:30.769010Z",
+     "start_time": "2024-10-31T09:16:25.265964Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -358,8 +368,8 @@
       "  Downloading httpx-0.27.2-py3-none-any.whl.metadata (7.1 kB)\r\n",
       "Collecting pydantic<3,>=1.9.0 (from groq)\r\n",
       "  Downloading pydantic-2.9.2-py3-none-any.whl.metadata (149 kB)\r\n",
-      "\u001B[2K     \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m149.4/149.4 kB\u001B[0m \u001B[31m822.5 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\r\n",
-      "\u001B[?25hRequirement already satisfied: sniffio in /opt/miniconda3/lib/python3.12/site-packages (from groq) (1.3.0)\r\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m149.4/149.4 kB\u001b[0m \u001b[31m822.5 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\r\n",
+      "\u001b[?25hRequirement already satisfied: sniffio in /opt/miniconda3/lib/python3.12/site-packages (from groq) (1.3.0)\r\n",
       "Requirement already satisfied: typing-extensions<5,>=4.7 in /opt/miniconda3/lib/python3.12/site-packages (from groq) (4.11.0)\r\n",
       "Requirement already satisfied: idna>=2.8 in /opt/miniconda3/lib/python3.12/site-packages (from anyio<5,>=3.5.0->groq) (3.7)\r\n",
       "Requirement already satisfied: certifi in /opt/miniconda3/lib/python3.12/site-packages (from httpx<1,>=0.23.0->groq) (2024.7.4)\r\n",
@@ -372,48 +382,48 @@
       "Collecting pydantic-core==2.23.4 (from pydantic<3,>=1.9.0->groq)\r\n",
       "  Downloading pydantic_core-2.23.4-cp312-cp312-macosx_11_0_arm64.whl.metadata (6.6 kB)\r\n",
       "Downloading groq-0.11.0-py3-none-any.whl (106 kB)\r\n",
-      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m106.5/106.5 kB\u001B[0m \u001B[31m846.8 kB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\r\n",
-      "\u001B[?25hDownloading httpx-0.27.2-py3-none-any.whl (76 kB)\r\n",
-      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m76.4/76.4 kB\u001B[0m \u001B[31m1.2 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\r\n",
-      "\u001B[?25hDownloading httpcore-1.0.6-py3-none-any.whl (78 kB)\r\n",
-      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m78.0/78.0 kB\u001B[0m \u001B[31m1.5 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\r\n",
-      "\u001B[?25hDownloading pydantic-2.9.2-py3-none-any.whl (434 kB)\r\n",
-      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m434.9/434.9 kB\u001B[0m \u001B[31m1.3 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0ma \u001B[36m0:00:01\u001B[0m\r\n",
-      "\u001B[?25hDownloading pydantic_core-2.23.4-cp312-cp312-macosx_11_0_arm64.whl (1.8 MB)\r\n",
-      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m1.8/1.8 MB\u001B[0m \u001B[31m1.9 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m00:01\u001B[0m00:01\u001B[0m\r\n",
-      "\u001B[?25hDownloading annotated_types-0.7.0-py3-none-any.whl (13 kB)\r\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m106.5/106.5 kB\u001b[0m \u001b[31m846.8 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\r\n",
+      "\u001b[?25hDownloading httpx-0.27.2-py3-none-any.whl (76 kB)\r\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.4/76.4 kB\u001b[0m \u001b[31m1.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\r\n",
+      "\u001b[?25hDownloading httpcore-1.0.6-py3-none-any.whl (78 kB)\r\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.0/78.0 kB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\r\n",
+      "\u001b[?25hDownloading pydantic-2.9.2-py3-none-any.whl (434 kB)\r\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m434.9/434.9 kB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\r\n",
+      "\u001b[?25hDownloading pydantic_core-2.23.4-cp312-cp312-macosx_11_0_arm64.whl (1.8 MB)\r\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\r\n",
+      "\u001b[?25hDownloading annotated_types-0.7.0-py3-none-any.whl (13 kB)\r\n",
       "Downloading h11-0.14.0-py3-none-any.whl (58 kB)\r\n",
-      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m58.3/58.3 kB\u001B[0m \u001B[31m5.0 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\r\n",
-      "\u001B[?25hInstalling collected packages: pydantic-core, h11, annotated-types, pydantic, httpcore, httpx, groq\r\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
+      "\u001b[?25hInstalling collected packages: pydantic-core, h11, annotated-types, pydantic, httpcore, httpx, groq\r\n",
       "Successfully installed annotated-types-0.7.0 groq-0.11.0 h11-0.14.0 httpcore-1.0.6 httpx-0.27.2 pydantic-2.9.2 pydantic-core-2.23.4\r\n"
      ]
     }
    ],
    "source": [
     "!pip install groq"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-10-31T09:16:30.769010Z",
-     "start_time": "2024-10-31T09:16:25.265964Z"
-    }
-   },
-   "id": "8cc51fd94e76a4f3",
-   "execution_count": 7
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Demonstration"
-   ],
+   "id": "f17ed0a713882ee4",
    "metadata": {
     "collapsed": false
    },
-   "id": "f17ed0a713882ee4"
+   "source": [
+    "# Demonstration"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "6c90fb7248b58427",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-31T09:25:38.372321Z",
+     "start_time": "2024-10-31T09:25:37.662106Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -429,7 +439,7 @@
     "from groq import Groq\n",
     "\n",
     "client = Groq(\n",
-    "    api_key=\"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\",\n",
+    "    api_key=os.getenv(\"GROQ_API_KEY\"),\n",
     ")\n",
     "\n",
     "chat_completion = client.chat.completions.create(\n",
@@ -461,39 +471,17 @@
     ")\n",
     "\n",
     "print(chat_completion.choices[0].message.content)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-10-31T09:25:38.372321Z",
-     "start_time": "2024-10-31T09:25:37.662106Z"
-    }
-   },
-   "id": "6c90fb7248b58427",
-   "execution_count": 15
+   ]
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "%%sql\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "SqlCellData": {
-     "variableName$1": "df_sql"
-    }
-   },
-   "id": "eece7952be428047"
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "execution_count": null,
+   "id": "1f2524aaab6125d9",
    "metadata": {
     "collapsed": false
    },
-   "id": "1f2524aaab6125d9"
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
